--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
     <h1>CV - Yannick Santerre</h1>
-   
+    <img src="images/CV_Yannick_SANTERRE_2025_GitHub.png" alt="CV of Yannick Santerre">
 </body>
 </html>
