--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Display PNG Image</title>
+    <title>Display JPG Image</title>
     <style>
         body {
             text-align: center;
@@ -19,6 +19,6 @@
 </head>
 <body>
     <h1>CV - Yannick Santerre</h1>
-    <img src="images/CV_Yannick_SANTERRE_2025.png" alt="CV of Yannick Santerre">
+    <img src="images/CV_Yannick_SANTERRE_2025.jpg" alt="CV of Yannick Santerre">
 </body>
 </html>
